--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: meeting, local: true) do |form| %>
   <% if meeting.errors.any? %>
     <div id="error_explanation">
@@ -11,10 +12,8 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id %>
-  </div>
+  
+  <%= form.hidden_field :user_id, value: current_user.id %>
 
   <div class="field">
     <%= form.label :room_id %>
