--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -2,7 +2,17 @@
 
 <p>
   <strong>Number:</strong>
-  <%= @room.number %>
 </p>
+
+
+<%= month_calendar(events: @room.meetings) do |date, meetings| %>
+  <%= date.day %>
+
+  <% meetings.each do |meeting| %>
+    <div>
+      <%= meeting.title %>
+    </div>
+  <% end %>
+<% end %>
 
 <%= link_to 'Back', rooms_path %>
