--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -7,9 +7,9 @@
 
 <%= month_calendar(events: @room.meetings) do |date, meetings| %>
   <%= date.day %>
-
   <% meetings.each do |meeting| %>
     <div>
+      <%= meeting.start_time.hour %>
       <%= meeting.title %>
     </div>
   <% end %>
