Add meeting feature
Create a button to add meetings on specific day
Passing room id in params hash
Hidden room id in the form

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -12,13 +12,8 @@
     </div>
   <% end %>
 
-  
+  <%= form.hidden_field :room_id, value: @new_meeting_info[:room_id] %>
   <%= form.hidden_field :user_id, value: current_user.id %>
-
-  <div class="field">
-    <%= form.label :room_id %>
-    <%= form.number_field :room_id %>
-  </div>
 
   <div class="field">
     <%= form.label :title %>
