--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -2,13 +2,20 @@
 
 <p>
   <strong>Number:</strong>
+  <strong><%= @room.number %></strong>
 </p>
 
 
 <%= month_calendar(events: @room.meetings) do |date, meetings| %>
-  <%= date.day %>
-  <% 8.upto(17) do |i| %>
-    <%= availability(meetings, i) %>
+  <h3>
+    <%= date.day %>
+    <%= link_to "+", new_meeting_path(:info => {:room_id => @room.id}) %>
+
+  </h3>
+  </br>
+  <% meetings.each do |meeting|%>
+    <%= "#{meeting.start_time.hour}h #{meeting.title}" %>
+    </br>
   <% end %>
 <% end %>
 
