Set availables hash
- Building help method to return a hash of availability
- Avalilables inside the params for new request

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,5 +1,6 @@
 <h1> Room: <%= @new_meeting_info[:room_id] %> </h1>
 <h1> Date: <%= @new_meeting_info[:date] %> </h1>
+<h1> Date: <%= @new_meeting_info[:availables] %> </h1>
 
 <%= form_with(model: meeting, local: true) do |form| %>
   <% if meeting.errors.any? %>
