--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,60 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body {
+  margin: 0;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: black;
+}
+
+.new_user, .new-room {
+  margin: auto;
+  width: 30%;
+}
+
+h1 {
+  text-align: center;
+}
+
+.room-card {
+    min-height: 80px;
+    padding: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 5px;
+    border-radius: 10px;
+    padding: 5px;
+    min-height: 90px;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  ;
+}
+
+
+.load-yield {
+    margin: 15px;
+}
+
+h1 {
+    background-color: #78767a;
+    color: white;
+    font-weight: bold;
+}
+
+.room-number {
+    font-size: 30px;
+    color: #747375;
+    font-weight: bold;
+    text-align: center;
+}
+
+.room-box {
+}
