--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,20 @@
     <title>BCalendar</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <nav class="d-flex justify-content-between align-items-center px-4 py-2">
+    <div class="left">
+      <%= image_tag("text-logo.svg" , size: "200x60", alt: "Main Icon") %>
+    </div>
+    <%= load_nav %>
+  </nav>
+    <div class='load-yield'>
+      <%= yield %>
+    </div>
   </body>
 </html>
