--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,25 +2,30 @@
 
 <h1>Rooms</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Number</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class='rooms-box row'>
+  <% @rooms.each do |room| %>
+    <div class= 'col-3 room-card' >
+    <div class= 'card'>
+      <h5 class='room-number'><%= room.number %></h5>
+      </br>
+      <div>
+        <%= link_to 'Calendar', room %>
+        <%= link_to image_tag("trash-icon.svg" , size: "25x25", alt: "Delete Icon"), room, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    </div>
+    </div>
+  <% end %>
+  <div class= 'col-3 room-card' >
+    <div class= 'card'>
+      <h5 class='room-number'>Add Room</h5>
+      
+      <%= link_to  image_tag("add-icon.svg" , size: "35x35", alt: "Add Icon"), new_room_path, :class => 'center' %>
+    </div>
+  </div>
 
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= room.number %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+</div>
+
 
 <br>
 
-<%= link_to 'New Room', new_room_path %>
+
