--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,14 +10,13 @@
   <h3>
     <%= date.day %>
     <% availables = availability(meetings)%>
-    <%= link_to "+", new_meeting_path(:info => {:room_id => @room.id, :date => date, :availables => availables}) %>
-
   </h3>
   </br>
   <% meetings.each do |meeting|%>
     <%= "#{meeting.start_time.hour}h #{meeting.title}" %>
     </br>
   <% end %>
+  <%= link_to image_tag("new-meeting.svg" , size: "50", alt: "Add Icon"), new_meeting_path(:info => {:room_id => @room.id, :date => date, :availables => availables}) %>
 <% end %>
 
 <%= link_to 'Back', rooms_path %>
