--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,6 +1,5 @@
-<h1> Room: <%= @new_meeting_info[:room_id] %> </h1>
-<h1> Date: <%= @new_meeting_info[:date] %> </h1>
-<h1> Date: <%= @new_meeting_info[:availables] %> </h1>
+<p> Room: <%= @new_meeting_info[:room_id] %> </p>
+<p> Date: <%= @new_meeting_info[:date] %> </p>
 
 
 <%= form_with(model: meeting, local: true) do |form| %>
