--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -7,16 +7,17 @@
 
 
 <%= month_calendar(events: @room.meetings) do |date, meetings| %>
-  <h3>
+  <h5>
     <%= date.day %>
     <% availables = availability(meetings)%>
-  </h3>
+  </h5>
   </br>
-  <% meetings.each do |meeting|%>
-    <%= "#{meeting.start_time.hour}h #{meeting.title}" %>
-    </br>
-  <% end %>
-  <%= link_to image_tag("new-meeting.svg" , size: "50", alt: "Add Icon"), new_meeting_path(:info => {:room_id => @room.id, :date => date, :availables => availables}) %>
+  <div class="meetings">
+    <% meetings.each do |meeting|%>
+      <p class="meetings-title"><span class= "blue">&#11044; </span><%= "  #{meeting.start_time.hour}h #{meeting.title}" %></p>
+    <% end %>
+  </div>
+  <p class="new-meet-link"><%= link_to image_tag("new-meeting.svg" , size: "50x25", alt: "Add Icon"), new_meeting_path(:info => {:room_id => @room.id, :date => date, :availables => availables}) %></p>
 <% end %>
 
 <%= link_to 'Back', rooms_path %>
