--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -2,7 +2,7 @@
 <p> Date: <%= @new_meeting_info[:date] %> </p>
 
 
-<%= form_with(model: meeting, local: true) do |form| %>
+<%= form_with(model: meeting, local: true, class: 'new-meeting') do |form| %>
   <% if meeting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(meeting.errors.count, "error") %> prohibited this meeting from being saved:</h2>
@@ -27,14 +27,15 @@
   <%= form.hidden_field :start_time, value: @new_meeting_info[:date] %>
 
   <div class="field">
-    <%= form.label :title %>
+    <%= form.label :title %></br>
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label :description %></br>
     <%= form.text_field :description %>
   </div>
+  </br>
 
   <div class="actions">
     <%= form.submit %>
