--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,22 @@
     <div class='load-yield'>
       <%= yield %>
     </div>
+
+
+
+    <footer class ="justify-content-between d-flex align-items-center px-4 py-2">
+      <div class="left">
+        <%= image_tag("icon.svg" , size: "150x45", alt: "Main Icon") %>
+      </div>
+      <div>
+      <p class="text-white pt-2"> Made with <span class="text_red font-weight-bold">&#9825;</span> by Mari Roque Developer</p>
+      </div>
+      <div class="text-white d-flex align-items-center"> 
+        <p class="pt-2 mr-1">Connect with the developer: </p>
+        <a href="https://www.linkedin.com/in/roquemarilena/"><%= image_tag("linkedin.svg" , size: "25", alt: "Linkedin from FlatIcon", :class => "mx-1") %></a>
+        <a href="https://github.com/MarilenaRoque"><%= image_tag("github.svg" , size: "25", alt: "Github from FlatIcon", :class => "mx-1") %></a>
+      </div>
+
+    </footer>
   </body>
 </html>
