--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,8 +1,6 @@
 <%= form_with(model: room, local: true, class: 'new-room') do |form| %>
   <% if room.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(room.errors.count, "error") %> prohibited this room from being saved:</h2>
-
       <ul>
         <% room.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -21,5 +19,5 @@
     <%= form.submit %>
   </div>
           </br>
-  <%= link_to 'Back', rooms_path %>
+  <%= link_to '<< Back', rooms_path %>
 <% end %>
