--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Rooms</h1>
 
 <div class='rooms-box row'>
@@ -10,6 +8,7 @@
       </br>
       <div>
         <%= link_to 'Calendar', room %>
+        <%= link_to image_tag("calendar.svg" , size: "25x25", alt: "Delete Icon"), room %>
         <%= link_to image_tag("trash-icon.svg" , size: "25x25", alt: "Delete Icon"), room, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
     </div>
