--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
 
+<%= link_to '<< Back', rooms_path %>
+</br>
 <h1>Room: <%= @room.number %></h1>
 
 
@@ -17,4 +18,4 @@
   <p class="new-meet-link"><%= link_to image_tag("add-icon.svg" , size: "20x20", alt: "Add Icon"), new_meeting_path(:info => {:room_id => @room.id, :date => date, :availables => availables}) %></p>
 <% end %>
 
-<%= link_to 'Back', rooms_path %>
+
