--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -9,7 +9,7 @@
       <div>
         <%= link_to 'Calendar', room %>
         <%= link_to image_tag("calendar.svg" , size: "25x25", alt: "Delete Icon"), room %>
-        <%= link_to image_tag("trash-icon.svg" , size: "25x25", alt: "Delete Icon"), room, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to image_tag("trash-icon.svg" , size: "25x25", alt: "Delete Icon"), room, method: :delete, data: { confirm: 'All the meetings in this room will be deleted too. Are you sure?' } %>
       </div>
     </div>
     </div>
